# LightSP

./: .gitignore  .prettierrc  README.md  build.ps1  build.sh  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts  vue.config.js
api_server/: .gitignore  CMakeLists.txt  api_server.service  main.cxx
api_server/lib/windows/: hv.exp  hv.lib
platform/chromium/: background.js  manifest.json
platform/firefox/: background.js  manifest.json
platform/opera/: background.js  manifest.json
public/: index.html  manifest.json  popup.html  popup.js
public/_locales/en/: messages.json
public/_locales/zh_CN/: messages.json
public/assets/weather/: city_list.csv
src/: App.vue  global.d.ts  main.js  main.ts  style.styl
src/assets/stylus/: style.styl
src/assets/weather/: city_list.csv  city_list_to_json.js  qweather-icons.css
src/assets/上架相关/: logo-sm.psd  logo.psd  preview.psd
src/common/: index.js
src/common/stylus/: style.styl
src/components/: Clock.vue  KeywordList.vue  Particle.vue  SearchBox.vue  Switcher.vue  Wallpaper.vue  Weather.vue  background.vue  clock.vue  input.vue  list.vue  mask.vue  responsive_input.vue  searchBox.vue  settings.vue  switch.vue  title.vue  weather.vue
src/components/settings/: background.vue  clock.vue  darkMode.vue  global.vue  index.vue  particle.vue  settings.vue  wallpaper.vue  weather.vue
src/components/weather/: index.vue  vSwitchLocation.vue
src/store/: clock.ts  darkMode.ts  index.js  index.ts  particle.ts  wallpaper.ts  weather.ts
(+1 files in other folders)
